# rfx-hunch

./: .env  .gitignore  Kconfig  Makefile.am  README.md  configure.ac
.examples/: Makefile.am
conf/: dk.sh
data/gobbin_db/: dsx3_28837.sav  dsx3_28838.sav  dsx3_28839.sav  dsx3_28841.sav  dsx3_29960.sav  dsx3_29961.sav  dsx3_30008.sav  dsx3_30011.sav  dsx3_30012.sav  dsx3_30018.sav  dsx3_30025.sav  dsx3_30052.sav  dsx3_30053.sav  dsx3_30056.sav  dsx3_30081.sav  dsx3_30089.sav  dsx3_30101.sav  dsx3_30102.sav  dsx3_30175.sav  dsx3_30177.sav  dsx3_30179.sav  dsx3_30182.sav  dsx3_30184.sav  dsx3_30194.sav  dsx3_30196.sav  dsx3_30197.sav  dsx3_30200.sav  dsx3_30227.sav  dsx3_30251.sav  dsx3_30253.sav  dsx3_30262.sav  dsx3_30674.sav  dsx3_30675.sav  dsx3_30676.sav  dsx3_30677.sav  dsx3_30678.sav  dsx3_30679.sav  dsx3_30680.sav  dsx3_30681.sav  dsx3_30745.sav  (+293 more)
data/thomson/: thomson_30008.sav  thomson_30011.sav  thomson_30012.sav  thomson_30018.sav  thomson_30025.sav  thomson_30053.sav  thomson_30056.sav  thomson_30089.sav  thomson_30102.sav  thomson_30175.sav  thomson_30177.sav  thomson_30179.sav  thomson_30182.sav  thomson_30184.sav  thomson_30194.sav  thomson_30196.sav  thomson_30200.sav  thomson_30253.sav  thomson_30262.sav  thomson_30674.sav  thomson_30675.sav  thomson_30676.sav  thomson_30677.sav  thomson_30678.sav  thomson_30679.sav  thomson_30745.sav  thomson_30750.sav  thomson_30756.sav  thomson_30775.sav  thomson_30776.sav  thomson_30778.sav  thomson_30784.sav  thomson_30786.sav  thomson_30788.sav  thomson_30791.sav  thomson_30796.sav  thomson_30797.sav  thomson_30798.sav  thomson_30801.sav  thomson_30802.sav  (+256 more)
doc/: ML_references.md  README.md
ext/: Makefile.am
ext/tf-docker/: Dockerfile
src/: Makefile.am
src/Tprofile_read/: Dataset_QSH.py  Dataset_TS.py  Dummy_g1data.py  Hunch_lsplot.py  Hunch_tSNEplot.py  Hunch_utils.py  Makefile.am  README.md  __init__.py  autoenc_1.py  create_db_1.py  create_db_2.py  ipysh.py  mail_david_20190215_NCT.txt  mail_gobbin_20190122.txt  play_db_1.py  read_db.py  read_test.py  spectrum_test.py  te_prof_test.py  test_env.py
src/Tprofile_read/doc/: mail_david_20190215_NCT.txt  mail_gobbin_20190122.txt  main_gobbin_20190729.txt
src/Tprofile_read/docker/: Dockerfile  experimentsVersionPath  treeSetSource
src/Tprofile_read/docker_v1/: Dockerfile  envsyms  experimentsVersion
src/Tprofile_read/examples/: AEFIT_dummy.py  AEFIT_dummy_v1.py  AEFIT_qsh.py  autoenc_1.py  bokeh_ex1.py  keras_VAE.py  src_dropout.py  strike_imgutils.py
src/Tprofile_read/jpnb/: AEFIT_test1.ipynb  STEP1.5 bias on generator distributions.ipynb  STEP1.ipynb  STEP1.py  STEP10 - rewritten autoencoder code in AEFIT4.ipynb  STEP11 - Compose QSH.ipynb  STEP11 - Compose-Copy1.ipynb  STEP11 - Compose-DUMMY.ipynb  STEP11 - Compose.ipynb  STEP12 - Compose QSH Reconstruction.ipynb  STEP12 - Param to SXR Latent Space.ipynb  STEP12 - STEP12-Param_to_SXR_LS_Br-rm.ipynb  STEP12 - SXR from Parameters.ipynb  STEP12-Param_to_SXR_LS_Br-rs_ABS-ARG.ipynb  STEP12-Param_to_SXR_LS_Br-rs_RE-IM.ipynb  STEP12.7-Param_to_SXR_LS_Br-rs-rm.ipynb  STEP1_fit.ipynb  STEP1_fit.py  STEP2.ipynb  STEP2_aefit.ipynb  STEP2_aefit.py  STEP2_many.ipynb  STEP3_missing_simulated_data.ipynb  STEP3_qsh_data.ipynb  STEP4  try with qsh subset normalized and unbiased.ipynb  STEP5 - Beta regularization.ipynb  STEP6  data - clip.ipynb  STEP6  data.ipynb  STEP6 beta, less clipping boundaries.ipynb  STEP6 beta, less constraints.ipynb  STEP6.5 test beta for analytical KL term.ipynb  STEP7  CLEAN DATABASE and convolution.ipynb  STEP7 convolution xy.ipynb  STEP7.1 AEFIT with Batch normalization.ipynb  STEP7.5 add tensorboard.ipynb  STEP8 - GAN3.ipynb  STEP8 GAN ( based on step7 output).ipynb  STEP8 GAN first example .ipynb  STEP8.1 GAN + VAE.ipynb  STEP9 - add model as inner layer.ipynb  (+21 more)
src/Tprofile_read/jpnb/.ipynb_checkpoints/: AEFIT_test1-checkpoint.ipynb  STEP1-checkpoint.ipynb  STEP2-checkpoint.ipynb  STEP3_missing_simulated_data-checkpoint.ipynb  STEP3_qsh_data-checkpoint.ipynb  STEP4  try with qsh subset normalized and unbiased-checkpoint.ipynb  STEP5 - Beta regularization-checkpoint.ipynb  STEP6 beta, less clipping boundaries-checkpoint.ipynb  STEP6 beta, less constraints-checkpoint.ipynb  STEP6.5 test beta for analytical KL term-checkpoint.ipynb  STEP7 convolution xy-checkpoint.ipynb  STEP7.5 add tensorboard-checkpoint.ipynb  STEP8 GAN ( based on step7 output)-checkpoint.ipynb  STEP8 GAN first example -checkpoint.ipynb  STEP8.1 GAN + VAE-checkpoint.ipynb  STEP9 - add model as inner layer-checkpoint.ipynb  sneplot-checkpoint.ipynb
src/Tprofile_read/jpnb/kcp/: aefit1_decoder.kcp.index  aefit1_encoder.kcp.index  checkpoint  prova1_decoder.kcp.index  prova1_encoder.kcp.index  step2_t1_decoder.kcp.index  step2_t1_encoder.kcp.index  step2_t2_decoder.kcp.index  step2_t2_encoder.kcp.index  step2_t3_decoder.kcp.index  step2_t3_encoder.kcp.index  step2_t4_decoder.kcp.index  step2_t4_encoder.kcp.index  step2_t5_decoder.kcp.index  step2_t5_encoder.kcp.index
src/Tprofile_read/jpnb/scipy_CBK/: FittingData.ipynb  Kwarg optimization wrapper.ipynb  bundle_adjustment.ipynb  robust_regression.ipynb
src/Tprofile_read/jpnb/tutorials/: cvae_tensoflow_tutorial_example.ipynb  plot_robust_fit.ipynb
src/Tprofile_read/jpnb/tutorials/.ipynb_checkpoints/: cvae_tensoflow_tutorial_example-checkpoint.ipynb  plot_compare_gpr_krr-checkpoint.ipynb  plot_kernel_ridge_regression-checkpoint.ipynb  plot_robust_fit-checkpoint.ipynb
src/Tprofile_read/models/: AEFIT.py  AEFIT0.py  AEFIT1.py  AEFIT2.py  AEFIT3.py  AEFIT4.py  AEFIT5.py  AEFIT6.py  AEFIT_DUA.py  AEFIT_v1.py  CAEFIT.py  CAEFIT1.py  Compose.py  GAN0.py  GAN1.py  GAN2.py  GAN3.py  SPFIT.py  __init__.py  base.py
src/Tprofile_read/ransac/: ransac_prova_1.py  ransac_prova_2.py
src/Tprofile_read/viewer/: aefit.py  main.py
src/Tprofile_read/viewer/templates/: index.html
